--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react": "~0.13.x"
   },
   "dependencies": {
-    "react-day-picker": "^1.0.1"
+    "react-day-picker": "1.0.1"
   },
   "devDependencies": {
     "babel": "^5.6.4",
@@ -41,7 +41,6 @@
     "classlist-polyfill": "^1.0.1",
     "coveralls": "^2.11.2",
     "moment": "^2.10.3",
-    "react": "^0.13.3",
-    "react-tap-event-plugin": "^0.1.7"
+    "react": "^0.13.3"
   }
 }
